--- a/airsonic-main/src/main/resources/templates/avatarUploadResult.html
+++ b/airsonic-main/src/main/resources/templates/avatarUploadResult.html
@@ -7,7 +7,7 @@
 <body class="mainframe bgcolor1">
 
 <h1>
-    <img th:src="${themes.get('settingsImage')}" alt=""/>
+    <img th:src="${themes?.get('settingsImage') ?: 'icons/default_light/settings.svg'}" alt=""/>
     <span style="vertical-align: middle" th:text="#{avataruploadresult.title}"></span>
 </h1>
 
