--- a/airsonic-main/src/main/resources/templates/lyrics.html
+++ b/airsonic-main/src/main/resources/templates/lyrics.html
@@ -7,43 +7,48 @@
 
     <script type="text/javascript" th:inline="javascript">
         // independent page, so StompClient does not belong to window.top
+        const hasLyrics = /*[[${view.lyrics != null}]]*/ false;
         function init() {
             StompClient.subscribe("lyrics.html", {
                 "/user/queue/lyrics/get": function(msg) {
                     getLyricsCallback(JSON.parse(msg.body));
                 }
             }, function() {
-                getLyrics('[(${model.artist})]', '[(${model.song})]');
+                if (hasLyrics) {
+                    $("#wait").css("display", "none");
+                    $("#lyrics").css("display", "inline");
+                    $("#noLyricsFound").css("display", "none");
+                } else {
+                    $("#wait").css("display", "inline");
+                    getLyrics('[(${view.artist})]', '[(${view.song})]', '[(${view.id})]');
+                }
             });
         }
 
-        function getLyrics(artist, song) {
+        function getLyrics(artist, song, id) {
             $("#wait").css("display", "inline");
             $("#lyrics").css("display", "none");
             $("#noLyricsFound").css("display", "none");
             $("#tryLater").css("display", "none");
-            StompClient.send("/app/lyrics/get", JSON.stringify({artist: artist, song: song}));
+            StompClient.send("/app/lyrics/get", JSON.stringify({artist: artist, song: song, id: id}));
         }
 
         function getLyricsCallback(lyricsInfo) {
-            $("#lyricsHeader").text(lyricsInfo.artist + " - " + lyricsInfo.title);
-            var lyrics;
-            if (lyricsInfo.lyrics != null) {
-                lyrics = lyricsInfo.lyrics.replace(/\n/g, "<br>");
-            }
-            $("#lyricsText").html(lyrics);
+            $("#lyricsHeader").text('[(${view.artist})]' + " - " + '[(${view.song})]');
             $("#wait").css("display", "none");
+            if (lyricsInfo.persisted === true) {
+                location.reload();
+                return;
+            }
             if (lyricsInfo.tryLater) {
                 $("#tryLater").css("display", "inline");
-            } else if (lyrics != null) {
-                $("#lyrics").css("display", "inline");
             } else {
                 $("#noLyricsFound").css("display", "inline");
             }
         }
 
         function search() {
-            getLyrics($('#artist').val(), $('#song').val());
+            getLyrics($('#artist').val(), $('#song').val(), '[(${view.id})]');
         }
     </script>
 
@@ -54,13 +59,13 @@
     <table>
         <tr>
             <td th:text="#{lyrics.artist}"></td>
-            <td style="padding-left:0.50em"><input id="artist" type="text" size="40" th:value="${model.artist}" tabindex="1"/></td>
+            <td style="padding-left:0.50em"><input id="artist" type="text" size="40" th:value="${view.artist}" tabindex="1"/></td>
             <td style="padding-left:0.75em"><input type="submit" th:value="#{lyrics.search}" style="width:6em"
                                                    tabindex="3"/></td>
         </tr>
         <tr>
             <td th:text="#{lyrics.song}"></td>
-            <td style="padding-left:0.50em"><input id="song" type="text" size="40" th:value="${model.song}" tabindex="2"/></td>
+            <td style="padding-left:0.50em"><input id="song" type="text" size="40" th:value="${view.song}" tabindex="2"/></td>
             <td style="padding-left:0.75em"><input type="button" th:value="#{common.close}" style="width:6em"
                                                    onclick="self.close()" tabindex="4"/></td>
         </tr>
@@ -72,9 +77,15 @@
 <p id="tryLater" style="display:none"><b th:text="#{lyrics.trylater}"></b></p>
 
 <div id="lyrics" style="display:none;">
-    <h2 id="lyricsHeader" style="text-align:center;margin-bottom:1em"></h2>
-
-    <div id="lyricsText"></div>
+    <h2 id="lyricsHeader" style="text-align:center;margin-bottom:1em" th:text="${view.artist + ' - ' + view.song}"></h2>
+    <div id="lyricsText">
+        <th:block th:if="${view.lyrics}">
+            <th:block th:each="str, stat : ${view.lyrics.split('\r\n|\r|\n', -1)}">
+                <th:block th:text="${str}"/>
+                <br th:if="${!stat.last}"/>
+            </th:block>
+        </th:block>
+    </div>
 
     <p class="detail" style="text-align:right" th:utext="#{lyrics.courtesy}">
     </p>
