--- a/airsonic-main/src/main/resources/templates/right.html
+++ b/airsonic-main/src/main/resources/templates/right.html
@@ -6,6 +6,33 @@
     <script type="text/javascript" th:src="@{/script/utils.js}"></script>
 
     <script type="text/javascript" th:inline="javascript">
+        class TaskQueue {
+          constructor() {
+            this.q = [];
+            this.running = false;
+          }
+          enqueue(task) {
+            return new Promise((resolve, reject) => {
+              this.q.push(async () => {
+                try {
+                  resolve(await task());
+                } catch (e) {
+                  reject(e);
+                }
+              });
+              if (!this.running) this._run();
+            });
+          }
+          async _run() {
+            this.running = true;
+            while (this.q.length) {
+              const t = this.q.shift();
+              await t();   // 1件終わるまで次を実行しない
+            }
+            this.running = false;
+          }
+        }
+
         function scanningStatus(msg) {
             var scanInfo = JSON.parse(msg.body);
             $("#scanCount").text(scanInfo.count);
@@ -29,32 +56,32 @@
                     // no need to populate initial because the updates will occur frequently enough and are self-sufficient
                     '/topic/scanStatus': scanningStatus,
                     '/topic/nowPlaying/current/add': function (msg) {
-                        addStatus(JSON.parse(msg.body), 'nowPlaying');
+                        enqueueAdd(JSON.parse(msg.body), 'nowPlaying');
                     },
                     '/topic/nowPlaying/current/remove': function (msg) {
-                        removeStatus(JSON.parse(msg.body), 'nowPlaying');
+                        enqueueRemove(JSON.parse(msg.body), 'nowPlaying');
                     },
                     '/topic/nowPlaying/recent/add': function (msg) {
-                        addStatus(JSON.parse(msg.body), 'recentlyPlayed');
+                        enqueueAdd(JSON.parse(msg.body), 'recentlyPlayed');
                     },
                     '/topic/nowPlaying/recent/remove': function (msg) {
-                        removeStatus(JSON.parse(msg.body), 'recentlyPlayed');
+                        enqueueRemove(JSON.parse(msg.body), 'recentlyPlayed');
                     },
                     // Add existing (initial population, one time)
                     '/app/nowPlaying/current': function (msg) {
                         $('#nowPlayingTable').empty();
-                        removeStatus({}, 'nowPlaying');
+                        enqueueRemove({}, 'nowPlaying');
                         var statuses = JSON.parse(msg.body);
                         for (var i = 0; i < statuses.length; i++) {
-                            addStatus(statuses[i], 'nowPlaying');
+                            enqueueAdd(statuses[i], 'nowPlaying');
                         }
                     },
                     '/app/nowPlaying/recent': function (msg) {
                         $('#recentlyPlayedTable').empty();
-                        removeStatus({}, 'recentlyPlayed');
+                        enqueueRemove({}, 'recentlyPlayed');
                         var statuses = JSON.parse(msg.body);
                         for (var i = 0; i < statuses.length; i++) {
-                            addStatus(statuses[i], 'recentlyPlayed');
+                            enqueueAdd(statuses[i], 'recentlyPlayed');
                         }
                     }
                 }
@@ -64,47 +91,44 @@
             top.StompClient.subscribe("right.html", sub);
         }
 
-        function addStatus(status, table) {
-            var html = "";
-            html += "<tr><td colspan='2' class='detail' style='padding-top:1em;white-space:nowrap'>";
+        const queue = new TaskQueue();
 
-            if (status.avatarUrl) {
-                html += "<img alt='Avatar' src='" + status.avatarUrl + "' style='padding-right:5pt;width:30px;height:30px'>";
-            }
-            html += "<b>" + status.username + "</b></td></tr>";
-
-            html += "<tr><td class='detail' style='padding-right:1em'>" +
-                    "<a title='" + status.tooltip + "' target='main' href='" + status.albumUrl + "'>";
-
-            if (status.artist != null) {
-                html += status.artist + "<br/>";
-            }
-
-            html += "<span class='songTitle'>" + status.title + "</span></a><br/>";
-            if (status.lyricsUrl != null) {
-                html += "<span class='forward'><a href='" + status.lyricsUrl + "' onclick=\"return popupSize(this, 'lyrics', 500, 550)\">" +
-                        /*[[#{main.lyrics}]]*/ "Lyrics" + "</a></span>";
-            }
-            html += "</td><td>" +
-                    "<a title='" + status.tooltip + "' target='main' href='" + status.albumUrl + "'>" +
-                    "<img alt='Cover art' src='" + status.coverArtUrl + "' class='dropshadow' height='60' width='60'></a>" +
-                    "</td></tr>";
-
-            var minutesAgo = status.minutesAgo;
-            if (minutesAgo > 4) {
-                html += "<tr><td class='detail' colspan='2'>" + minutesAgo + " [(#{main.minutesago})]</td></tr>";
-            }
-
-            $('.playstatus-'+status.transferId).remove();
-            $('#' + table + 'Table').append($(html).addClass('playstatus-'+status.transferId).addClass('mediafile-'+status.mediaFileId));
-            $('#' + table).show();
+        function enqueueAdd(status, table) {
+          return queue.enqueue(() => addStatus(status, table));
+        }
+        function enqueueRemove(status, table) {
+          return queue.enqueue(() => removeStatus(status, table));
         }
 
-        function removeStatus(status, table) {
-            $('.playstatus-'+status.transferId+'.mediafile-'+status.mediaFileId).remove();
-            if ($('#' + table + 'Table').children().length == 0) {
-                $('#' + table).hide();
+
+        async function addStatus(status, table) {
+            const tableRoot = document.getElementById(table + 'Table');
+            const selector = '.playstatus-' + status.transferId;
+
+
+            const res = await fetch(`/nowPlaying/status?id=${encodeURIComponent(status.transferId)}`, { credentials: 'same-origin' });
+
+            if (!res.ok) {
+                return;
             }
+            const html = await res.text();
+            const tpl = document.createElement('template');
+            tpl.innerHTML = html.trim();
+
+            tableRoot.querySelectorAll(selector).forEach(el => el.remove());
+            tableRoot.append(tpl.content);
+            updateTableVisibility(table);
+        };
+
+        function removeStatus(status, table) {
+            const tableRoot = document.getElementById(table + 'Table');
+            if (!tableRoot) return;
+            tableRoot.querySelectorAll('.playstatus-' + status.transferId + '.mediafile-' + status.mediaFileId).forEach(el => el.remove());
+            updateTableVisibility(table);
+        }
+        function updateTableVisibility(table) {
+            const hasRows = $('#' + table + 'Table').find('tr').length > 0;
+            $('#' + table).toggle(hasRows);
         }
     </script>
 </head>
