--- a/airsonic-main/src/main/resources/templates/lyrics.html
+++ b/airsonic-main/src/main/resources/templates/lyrics.html
@@ -34,7 +34,6 @@
         }
 
         function getLyricsCallback(lyricsInfo) {
-            $("#lyricsHeader").text('[(${view.artist})]' + " - " + '[(${view.song})]');
             $("#wait").css("display", "none");
             if (lyricsInfo.persisted === true) {
                 location.reload();
@@ -44,6 +43,9 @@
                 $("#tryLater").css("display", "inline");
             } else {
                 $("#noLyricsFound").css("display", "inline");
+            }
+            if (hasLyrics) {
+                $("#lyrics").css("display", "inline");
             }
         }
 
@@ -66,8 +68,13 @@
         <tr>
             <td th:text="#{lyrics.song}"></td>
             <td style="padding-left:0.50em"><input id="song" type="text" size="40" th:value="${view.song}" tabindex="2"/></td>
-            <td style="padding-left:0.75em"><input type="button" th:value="#{common.close}" style="width:6em"
-                                                   onclick="self.close()" tabindex="4"/></td>
+            <td style="padding-left:0.75em">
+                <button type="button"
+                        th:onclick="|location.href='@{/lyrics/edit(id=${view.id})}'|"
+                        style="width:6em; display:inline-block; text-align:center;"
+                        tabindex="4" th:text="#{common.edit}">
+                </button>
+            </td>
         </tr>
     </table>
 </form>
@@ -77,7 +84,8 @@
 <p id="tryLater" style="display:none"><b th:text="#{lyrics.trylater}"></b></p>
 
 <div id="lyrics" style="display:none;">
-    <h2 id="lyricsHeader" style="text-align:center;margin-bottom:1em" th:text="${view.artist + ' - ' + view.song}"></h2>
+    <h2 id="lyricsHeader" style="text-align:center;margin-bottom:1em"
+        th:text="${(#strings.isEmpty(view.artist) ? '' : view.artist + ' - ') + #strings.defaultString(view.song, '')}"></h2>
     <div id="lyricsText">
         <th:block th:if="${view.lyrics}">
             <th:block th:each="str, stat : ${view.lyrics.split('\r\n|\r|\n', -1)}">
@@ -87,7 +95,7 @@
         </th:block>
     </div>
 
-    <p class="detail" style="text-align:right" th:utext="#{lyrics.courtesy}">
+    <p class="detail" style="text-align:right" th:text="${'lyrics from ' + view.source}">
     </p>
 </div>
 
